Moved non-application specific stuff to distro layer.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -13,7 +13,7 @@ COMBINED_FEATURES_append += "3g bluetooth usbgadget usbhost"
 #VIRTUAL-RUNTIME_syslog = ""
 #VIRTUAL-RUNTIME_initscripts = ""
 
-IMAGE_INSTALL_append = " medusa-apps medusa-bash"
+IMAGE_INSTALL_append = " medusa-apps"
 IMAGE_INSTALL_append = " ntp ppp wvdial"
 IMAGE_INSTALL_append = " gnupg pristine-tar-fwu zram"
 IMAGE_INSTALL_append = " gtest"
