Added systemd and openssh server.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -3,7 +3,7 @@ require conf/distro/poky.conf
 DISTRO = "medusa"
 DISTRO_NAME = "Stromer Medusa Distribution"
 
-#DISTRO_FEATURES += "systemd"
+DISTRO_FEATURES += "systemd"
 COMBINED_FEATURES_append += "3g bluetooth usbgadget usbhost"
 
 #VIRTUAL-RUNTIME_dev_manager = "udev"
@@ -19,4 +19,5 @@ IMAGE_INSTALL_append = " gnupg pristine-tar-fwu zram"
 IMAGE_INSTALL_append = " gtest"
 IMAGE_INSTALL_append = " tcf-agent"
 IMAGE_INSTALL_append = " bluez5-obex bluez5-noinst-tools"
+IMAGE_INSTALL_append = " openssh openssh-sftp-server"
 IMAGE_INSTALL_append = " can-utils cronie file gawk grep htop nano net-tools procps python sed rsync tree util-linux"
