Added Qt append from Phytec's ALPHA2 yogurt layer.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -15,9 +15,15 @@ COMBINED_FEATURES_append += "3g bluetooth usbgadget usbhost"
 
 IMAGE_INSTALL_append = " medusa-apps"
 IMAGE_INSTALL_append = " ntp ppp wvdial"
+IMAGE_INSTALL_append = " qtbase qtbase-fonts"
+IMAGE_INSTALL_append = " qtbase-examples"
 IMAGE_INSTALL_append = " gnupg pristine-tar-fwu zram"
 IMAGE_INSTALL_append = " gtest"
 IMAGE_INSTALL_append = " tcf-agent"
 IMAGE_INSTALL_append = " bluez5-obex bluez5-noinst-tools"
 IMAGE_INSTALL_append = " openssh openssh-sftp-server"
 IMAGE_INSTALL_append = " can-utils cronie file gawk grep htop nano net-tools procps python sed rsync tree util-linux"
+
+# TODO: remove this when examples are no longer needed
+PACKAGECONFIG_append_pn-qtbase = " examples"
+IMAGE_INSTALL_append = " qtbase-examples"
