Added bluez5 to image.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -20,7 +20,7 @@ IMAGE_INSTALL_append = " qtbase-examples"
 IMAGE_INSTALL_append = " gnupg pristine-tar-fwu zram"
 IMAGE_INSTALL_append = " gtest"
 IMAGE_INSTALL_append = " tcf-agent"
-IMAGE_INSTALL_append = " bluez5-obex bluez5-noinst-tools"
+IMAGE_INSTALL_append = " bluez5 bluez5-obex bluez5-noinst-tools"
 IMAGE_INSTALL_append = " openssh openssh-sftp-server"
 IMAGE_INSTALL_append = " can-utils cronie file gawk grep htop nano net-tools procps python sed rsync tree util-linux"
 
