- Added busybox defconfig. - Reworked local.conf.sample. - Added medusa-versioning class. - Adjusted, distro, image and sdk naming to stromer scheme.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -1,29 +1,59 @@
-require conf/distro/poky.conf
+INHERIT += "medusa-version"
 
+# Distro naming
 DISTRO = "medusa"
 DISTRO_NAME = "Stromer Medusa Distribution"
+DISTRO_VERSION = "${MEDUSA_METADATA_VERSION}.${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
 
-DISTRO_FEATURES += "systemd"
-COMBINED_FEATURES_append += "3g bluetooth usbgadget usbhost"
+# Image naming
+IMAGE_NAME = "${IMAGE_BASENAME}-${MEDUSA_METADATA_VERSION}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
+IMAGE_LINK_NAME = "${IMAGE_BASENAME}"
 
-#VIRTUAL-RUNTIME_dev_manager = "udev"
-#VIRTUAL-RUNTIME_init_manager = "systemd"
-#DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
-#VIRTUAL-RUNTIME_login_manager = "busybox"
-#VIRTUAL-RUNTIME_syslog = ""
-#VIRTUAL-RUNTIME_initscripts = ""
+# SDK naming
+SDK_NAME = "${DISTRO}-${SDK_ARCH}"
+SDK_VERSION = "${MEDUSA_METADATA_GIT_DATE_TIME}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
+SDKPATH = "/opt/${DISTRO}/${MEDUSA_METADATA_GIT_DATE_TIME}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
 
+# Distro features
+DISTRO_FEATURES = "systemd"
+COMBINED_FEATURES = "3g bluetooth usbgadget usbhost"
+
+# Virtual runtime settings
+VIRTUAL-RUNTIME_dev_manager = "udev"
+VIRTUAL-RUNTIME_init_manager = "systemd"
+DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
+VIRTUAL-RUNTIME_login_manager = "busybox"
+VIRTUAL-RUNTIME_syslog = ""
+VIRTUAL-RUNTIME_initscripts = ""
+
+# Image appends
 IMAGE_INSTALL_append = " medusa-apps"
-IMAGE_INSTALL_append = " ntp ppp wvdial"
+IMAGE_INSTALL_append = " bluez5 ntp ppp wvdial"
 IMAGE_INSTALL_append = " qtbase qtbase-fonts"
-IMAGE_INSTALL_append = " qtbase-examples"
-IMAGE_INSTALL_append = " gnupg pristine-tar-fwu zram"
+IMAGE_INSTALL_append = " gnupg pristine-tar-fwu xdelta3"
 IMAGE_INSTALL_append = " gtest"
 IMAGE_INSTALL_append = " tcf-agent"
-IMAGE_INSTALL_append = " bluez5 bluez5-obex bluez5-noinst-tools"
 IMAGE_INSTALL_append = " openssh openssh-sftp-server"
-IMAGE_INSTALL_append = " can-utils cronie file gawk grep htop nano net-tools procps python sed rsync tree util-linux"
+IMAGE_INSTALL_append = " busybox can-utils htop nano python rsync tree"
 
 # TODO: remove this when examples are no longer needed
 PACKAGECONFIG_append_pn-qtbase = " examples"
 IMAGE_INSTALL_append = " qtbase-examples"
+
+# Do not install any locales
+IMAGE_LINGUAS = ""
+
+# activate config checker
+INHERIT += "sanity"
+
+#run QA tests on recipes
+INHERIT += "recipe_sanity"
+
+#run QA tests on builds and packages and log them
+INHERIT += "insane"
+QA_LOG = "1"
+
+# Log information on images and packages
+INHERIT += "buildhistory"
+BUILDHISTORY_COMMIT = "1"
+INHERIT += "buildstats"
