Use git date and time for distro version.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -3,7 +3,7 @@ INHERIT += "medusa-version"
 # Distro naming
 DISTRO = "medusa"
 DISTRO_NAME = "Stromer Medusa Distribution"
-DISTRO_VERSION = "${MEDUSA_METADATA_VERSION}.${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
+DISTRO_VERSION = "${MEDUSA_METADATA_GIT_DATE_TIME}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
 
 # Image naming
 IMAGE_NAME = "${IMAGE_BASENAME}-${MEDUSA_METADATA_VERSION}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
