Use fixed IP address 192.168.3.11 for eth1 and 192.168.4.11 for eth0.

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,8 +9,10 @@
 *.gitignore     text eol=lf
 *.json          text eol=lf
 *.md            text eol=lf
+*.network       text eol=lf
 *.patch         text eol=lf
 *.py            text eol=lf
 *.sample        text eol=lf
+*.service       text eol=lf
 *.sh            text eol=lf
 *.txt           text eol=lf
