Set graphical.target as default.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -26,6 +26,9 @@ VIRTUAL-RUNTIME_login_manager = "busybox"
 VIRTUAL-RUNTIME_syslog = ""
 VIRTUAL-RUNTIME_initscripts = ""
 
+# systemd settings
+SYSTEMD_DEFAULT_TARGET = "graphical.target"
+
 # Image appends
 IMAGE_INSTALL_append = " medusa-apps"
 IMAGE_INSTALL_append = " bluez5 ntp ppp wvdial"
