Added vardepsexclude for image to fix taskhash mismatches.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -5,8 +5,9 @@ DISTRO = "medusa"
 DISTRO_NAME = "Stromer Medusa Distribution"
 DISTRO_VERSION = "${MEDUSA_METADATA_GIT_DATE_TIME}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
 
-# Image naming
+# Image naming (set IMAGE_NAME[vardepsexclude] to avoid taskhash mismatches)
 IMAGE_NAME = "${IMAGE_BASENAME}-${MEDUSA_METADATA_VERSION}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
+IMAGE_NAME[vardepsexclude] += "MEDUSA_METADATA_VERSION MEDUSA_METADATA_GIT_HASH_SHORT MEDUSA_METADATA_GIT_STATUS"
 IMAGE_LINK_NAME = "${IMAGE_BASENAME}"
 
 # SDK naming
