Enabled medusa services.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -7,7 +7,7 @@ DISTRO_VERSION = "${MEDUSA_METADATA_GIT_DATE_TIME}-${MEDUSA_METADATA_GIT_HASH_SH
 
 # Image naming (set IMAGE_NAME[vardepsexclude] to avoid taskhash mismatches)
 IMAGE_NAME = "${IMAGE_BASENAME}-${MEDUSA_METADATA_VERSION}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
-IMAGE_NAME[vardepsexclude] += "MEDUSA_METADATA_VERSION MEDUSA_METADATA_GIT_HASH_SHORT MEDUSA_METADATA_GIT_STATUS"
+IMAGE_NAME[vardepsexclude] += " MEDUSA_METADATA_VERSION MEDUSA_METADATA_GIT_HASH_SHORT MEDUSA_METADATA_GIT_STATUS"
 IMAGE_LINK_NAME = "${IMAGE_BASENAME}"
 
 # SDK naming
@@ -31,7 +31,7 @@ VIRTUAL-RUNTIME_initscripts = ""
 SYSTEMD_DEFAULT_TARGET = "graphical.target"
 
 # Image appends
-IMAGE_INSTALL_append = " medusa-apps"
+IMAGE_INSTALL_append = " medusa-apps medusa-services"
 IMAGE_INSTALL_append = " bluez5 ntp ppp wvdial"
 IMAGE_INSTALL_append = " qtbase qtbase-fonts"
 IMAGE_INSTALL_append = " gnupg pristine-tar-fwu xdelta3"
