--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -33,16 +33,15 @@ SYSTEMD_DEFAULT_TARGET = "graphical.target"
 # Image appends
 IMAGE_INSTALL_append = " medusa-apps medusa-services"
 IMAGE_INSTALL_append = " bluez5 ntp ppp wvdial"
-IMAGE_INSTALL_append = " qtbase qtbase-fonts"
 IMAGE_INSTALL_append = " gnupg pristine-tar-fwu xdelta3"
 IMAGE_INSTALL_append = " gtest"
 IMAGE_INSTALL_append = " tcf-agent"
 IMAGE_INSTALL_append = " openssh openssh-sftp-server"
 IMAGE_INSTALL_append = " busybox can-utils htop nano python rsync tree"
 
-# TODO: remove this when examples are no longer needed
-PACKAGECONFIG_append_pn-qtbase = " examples"
-IMAGE_INSTALL_append = " qtbase-examples"
+# Uncomment this to install qt exmaples.
+#PACKAGECONFIG_append_pn-qtbase = " examples"
+#IMAGE_INSTALL_append = " qtbase-examples"
 
 # Do not install any locales
 IMAGE_LINGUAS = ""
