Added vardepsexclude separately.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -7,7 +7,9 @@ DISTRO_VERSION = "${MEDUSA_METADATA_GIT_DATE_TIME}-${MEDUSA_METADATA_GIT_HASH_SH
 
 # Image naming (set IMAGE_NAME[vardepsexclude] to avoid taskhash mismatches)
 IMAGE_NAME = "${IMAGE_BASENAME}-${MEDUSA_METADATA_VERSION}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
-IMAGE_NAME[vardepsexclude] += " MEDUSA_METADATA_VERSION MEDUSA_METADATA_GIT_HASH_SHORT MEDUSA_METADATA_GIT_STATUS"
+IMAGE_NAME[vardepsexclude] += "MEDUSA_METADATA_VERSION"
+IMAGE_NAME[vardepsexclude] += "MEDUSA_METADATA_GIT_HASH_SHORT"
+IMAGE_NAME[vardepsexclude] += "MEDUSA_METADATA_GIT_STATUS"
 IMAGE_LINK_NAME = "${IMAGE_BASENAME}"
 
 # SDK naming
