--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -22,7 +22,9 @@ SDKPATH = "/opt/${DISTRO}/${MEDUSA_METADATA_GIT_DATE_TIME}-${MEDUSA_METADATA_GIT
 
 # Distro features
 DISTRO_FEATURES = "systemd"
-COMBINED_FEATURES = "3g bluetooth usbgadget usbhost"
+
+# Machine features
+MACHINE_FEATURES_append = " 3g can bluetooth usbgadget usbhost"
 
 # Virtual runtime settings
 VIRTUAL-RUNTIME_dev_manager = "udev"
@@ -34,15 +36,22 @@ VIRTUAL-RUNTIME_initscripts = ""
 
 # systemd settings
 SYSTEMD_DEFAULT_TARGET = "graphical.target"
+BAD_RECOMMENDATIONS += "systemd-extra-utils udev-hwdb"
 
 # Image appends
 IMAGE_INSTALL_append = " medusa-apps medusa-services"
-IMAGE_INSTALL_append = " bluez5 ntp ppp wvdial"
+IMAGE_INSTALL_append = " bluez5 ppp wvdial"
 IMAGE_INSTALL_append = " gnupg pristine-tar-fwu xdelta3"
 IMAGE_INSTALL_append = " gtest"
 IMAGE_INSTALL_append = " tcf-agent"
 IMAGE_INSTALL_append = " openssh openssh-sftp-server"
 IMAGE_INSTALL_append = " busybox can-utils htop nano python rsync tree"
+
+# Uncomment this to save some space
+#PACKAGECONFIG_DEFAULT_remove_pn-qtbase = " dbus"
+
+# Uncomment this to install systemd-analyze.
+#IMAGE_INSTALL_append = " systemd-analyze"
 
 # Uncomment this to install qt exmaples.
 #PACKAGECONFIG_append_pn-qtbase = " examples"
@@ -51,13 +60,13 @@ IMAGE_INSTALL_append = " busybox can-utils htop nano python rsync tree"
 # Do not install any locales
 IMAGE_LINGUAS = ""
 
-# activate config checker
+# Activate config checker
 INHERIT += "sanity"
 
-#run QA tests on recipes
+# Run QA tests on recipes
 INHERIT += "recipe_sanity"
 
-#run QA tests on builds and packages and log them
+# Run QA tests on builds and packages and log them
 INHERIT += "insane"
 QA_LOG = "1"
 
