--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -1,22 +1,19 @@
 INHERIT += "medusa-version"
+BB_HASHCONFIG_WHITELIST += "MEDUSA_METADATA_VERSION MEDUSA_METADATA_GIT_DATE_TIME MEDUSA_METADATA_GIT_HASH_SHORT MEDUSA_METADATA_GIT_STATUS"
 
 # Distro naming
 DISTRO = "medusa"
 DISTRO_NAME = "Stromer Medusa Distribution"
 DISTRO_VERSION = "${MEDUSA_METADATA_GIT_DATE_TIME}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
-DISTRO_VERSION[vardepsexclude] = "MEDUSA_METADATA_GIT_DATE_TIME MEDUSA_METADATA_GIT_HASH_SHORT MEDUSA_METADATA_GIT_STATUS"
 
 # Image naming
 IMAGE_LINK_NAME = "${IMAGE_BASENAME}"
 IMAGE_NAME = "${IMAGE_BASENAME}-${MEDUSA_METADATA_VERSION}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
-IMAGE_NAME[vardepsexclude] = "MEDUSA_METADATA_VERSION MEDUSA_METADATA_GIT_HASH_SHORT MEDUSA_METADATA_GIT_STATUS"
 
 # SDK naming
 SDK_NAME = "${DISTRO}-${SDK_ARCH}"
 SDK_VERSION = "${MEDUSA_METADATA_GIT_DATE_TIME}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
-SDK_VERSION[vardepsexclude] = "MEDUSA_METADATA_GIT_DATE_TIME MEDUSA_METADATA_GIT_HASH_SHORT MEDUSA_METADATA_GIT_STATUS"
 SDKPATH = "/opt/${DISTRO}/${MEDUSA_METADATA_GIT_DATE_TIME}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
-SDKPATH[vardepsexclude] = "MEDUSA_METADATA_GIT_DATE_TIME MEDUSA_METADATA_GIT_HASH_SHORT MEDUSA_METADATA_GIT_STATUS"
 
 # Distro features
 DISTRO_FEATURES = "systemd"
