Include MEDUSA_METADATA_GIT_DATE_TIME into image name.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -8,7 +8,7 @@ DISTRO_VERSION = "${MEDUSA_METADATA_GIT_DATE_TIME}-${MEDUSA_METADATA_GIT_HASH_SH
 
 # Image naming
 IMAGE_LINK_NAME = "${IMAGE_BASENAME}"
-IMAGE_NAME = "${IMAGE_BASENAME}-${MEDUSA_METADATA_VERSION}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
+IMAGE_NAME = "${IMAGE_BASENAME}-${MEDUSA_METADATA_VERSION}-${MEDUSA_METADATA_GIT_DATE_TIME}-${MEDUSA_METADATA_GIT_HASH_SHORT}${MEDUSA_METADATA_GIT_STATUS}"
 
 # SDK naming
 SDK_NAME = "${DISTRO}-${SDK_ARCH}"
