Added alsa lib and utils.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -19,7 +19,7 @@ SDKPATH = "/opt/${DISTRO}/${MEDUSA_METADATA_GIT_DATE_TIME}-${MEDUSA_METADATA_GIT
 DISTRO_FEATURES = "systemd"
 
 # Machine features
-MACHINE_FEATURES_append = " 3g can bluetooth usbgadget usbhost"
+MACHINE_FEATURES_append = " 3g alsa can bluetooth usbgadget usbhost"
 
 # Virtual runtime settings
 VIRTUAL-RUNTIME_dev_manager = "udev"
@@ -40,7 +40,8 @@ IMAGE_INSTALL_append = " gnupg pristine-tar-fwu xdelta3"
 IMAGE_INSTALL_append = " gtest"
 IMAGE_INSTALL_append = " tcf-agent"
 IMAGE_INSTALL_append = " openssh openssh-sftp-server"
-IMAGE_INSTALL_append = " busybox can-utils htop nano python rsync tree"
+IMAGE_INSTALL_append = " alsa-utils busybox can-utils htop nano python rsync tree"
+IMAGE_INSTALL_append = " alsa-lib"
 
 # Uncomment this to save some space
 #PACKAGECONFIG_DEFAULT_remove_pn-qtbase = " dbus"
