Added Phytec git mirrors.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -56,6 +56,9 @@ IMAGE_INSTALL_append = " alsa-lib"
 # Do not install any locales
 IMAGE_LINGUAS = ""
 
+# Enable this to mount the image read-only
+#EXTRA_IMAGE_FEATURES = "read-only-rootfs"
+
 # Activate config checker
 INHERIT += "sanity"
 
@@ -70,3 +73,9 @@ QA_LOG = "1"
 INHERIT += "buildhistory"
 BUILDHISTORY_COMMIT = "1"
 INHERIT += "buildstats"
+
+# Phytec git mirrors
+GIT_URL_pn-barebox = "git://git@git.stromerbike.com/st2/barebox.git;protocol=ssh"
+GIT_URL_pn-linux-mainline = "git://git@git.stromerbike.com/st2/linux-mainline.git;protocol=ssh"
+#GIT_URL_pn-barebox = "git://github.com/tramseyer/barebox.git;protocol=git"
+#GIT_URL_pn-linux-mainline = "git://github.com/tramseyer/linux-mainline.git;protocol=git"
