--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -38,7 +38,7 @@ IMAGE_INSTALL_append = " medusa-apps medusa-services"
 IMAGE_INSTALL_append = " bluez5 ppp wvdial"
 IMAGE_INSTALL_append = " gnupg pristine-tar-fwu xdelta3"
 IMAGE_INSTALL_append = " gtest"
-IMAGE_INSTALL_append = " tcf-agent"
+IMAGE_INSTALL_append = " gdbserver tcf-agent"
 IMAGE_INSTALL_append = " openssh openssh-sftp-server"
 IMAGE_INSTALL_append = " alsa-utils busybox can-utils htop nano python rsync tree"
 IMAGE_INSTALL_append = " alsa-lib"
