Image size optimizations.

--- a/conf/distro/medusa.conf
+++ b/conf/distro/medusa.conf
@@ -31,20 +31,19 @@ VIRTUAL-RUNTIME_initscripts = ""
 
 # systemd settings
 SYSTEMD_DEFAULT_TARGET = "graphical.target"
-BAD_RECOMMENDATIONS += "systemd-extra-utils udev-hwdb"
+BAD_RECOMMENDATIONS += "systemd-extra-utils udev-hwdb e2fsprogs-e2fsck kernel-module-ipv6"
+
+# Remove full-cmdline since almost all features are already present in busybox
+IMAGE_INSTALL_remove_pn-omni-image = " packagegroup-core-full-cmdline"
 
 # Image appends
 IMAGE_INSTALL_append = " medusa-apps medusa-services"
 IMAGE_INSTALL_append = " bluez5 ppp wvdial"
 IMAGE_INSTALL_append = " gnupg pristine-tar-fwu xdelta3"
-IMAGE_INSTALL_append = " gtest"
 IMAGE_INSTALL_append = " gdbserver tcf-agent"
 IMAGE_INSTALL_append = " openssh openssh-sftp-server"
 IMAGE_INSTALL_append = " alsa-utils busybox can-utils htop nano python rsync tree"
 IMAGE_INSTALL_append = " alsa-lib"
-
-# Uncomment this to save some space
-#PACKAGECONFIG_DEFAULT_remove_pn-qtbase = " dbus"
 
 # Uncomment this to install systemd-analyze.
 #IMAGE_INSTALL_append = " systemd-analyze"
