Renamed omni to medusa.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,9 +5,9 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "medusa"
-BBFILE_PATTERN_medusa = "^${LAYERDIR}/"
-BBFILE_PRIORITY_medusa = "10"
+BBFILE_COLLECTIONS += "medusa-dist"
+BBFILE_PATTERN_medusa-dist = "^${LAYERDIR}/"
+BBFILE_PRIORITY_medusa-dist = "10"
 
 # Layer dependencies
-LAYERDEPENDS_medusa = "phytec omni medusa-app"
+LAYERDEPENDS_medusa-dist = "phytec medusa medusa-app"
