--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -1,5 +1,5 @@
 # Sets the default machine
-MACHINE ?= "imx6ul-omni"
+MACHINE ?= "imx6ul-medusa"
 
 # Sets the default distribution
 DISTRO ?= "medusa"
