--- a/recipes-core/systemd/systemd-units/wvdial.service
+++ b/recipes-core/systemd/systemd-units/wvdial.service
@@ -1,11 +1,13 @@
 [Unit]
 Description=wvdial internet dialer service
+After=gsm.service
+Requires=gsm.service
+PartOf=gsm.service
 Wants=network.target
 
 [Service]
 Type=simple
-# wait for some seconds after ttyACM0 has been detected or dial command ATDT*99# will not succeed
-ExecStart=/bin/bash -c "/bin/sleep 5 && /usr/bin/wvdial"
+ExecStart=/usr/bin/wvdial
 ExecStop=/bin/kill -TERM $MAINPID
 Restart=always
 RestartSec=5
