--- a/recipes-core/systemd/systemd-units/wvdial.service
+++ b/recipes-core/systemd/systemd-units/wvdial.service
@@ -7,7 +7,8 @@ Wants=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/wvdial
+# Wait for some seconds gsm has been started or dial command ATDT*99# will not succeed.
+ExecStart=/bin/bash -c "/bin/sleep 30 && /usr/bin/wvdial"
 ExecStop=/bin/kill -TERM $MAINPID
 Restart=always
 RestartSec=5
