--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 * text=auto
 
 # Ensure no CRLF line-endings, neither on checkout nor on checkin for specified file types.
+*.bashrc        text eol=lf
 *.bb            text eol=lf
 *.bbappend      text eol=lf
 *.conf          text eol=lf
@@ -9,9 +10,11 @@
 *.gitignore     text eol=lf
 *.json          text eol=lf
 *.md            text eol=lf
+*.MIT           text eol=lf
 *.network       text eol=lf
 *.patch         text eol=lf
 *.py            text eol=lf
+*.profile       text eol=lf
 *.sample        text eol=lf
 *.service       text eol=lf
 *.sh            text eol=lf
