--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,7 +7,7 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 
 BBFILE_COLLECTIONS += "medusa-dist"
 BBFILE_PATTERN_medusa-dist = "^${LAYERDIR}/"
-BBFILE_PRIORITY_medusa-dist = "50"
+BBFILE_PRIORITY_medusa-dist = "40"
 
 # Layer dependencies
-LAYERDEPENDS_medusa-dist = "phytec medusa medusa-app"
+LAYERDEPENDS_medusa-dist = "phytec medusa"
