Added license directory.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,5 +9,8 @@ BBFILE_COLLECTIONS += "medusa-dist"
 BBFILE_PATTERN_medusa-dist = "^${LAYERDIR}/"
 BBFILE_PRIORITY_medusa-dist = "40"
 
+# Additional license directories.
+LICENSE_PATH += "${LAYERDIR}/licenses"
+
 # Layer dependencies
 LAYERDEPENDS_medusa-dist = "phytec medusa"
