Start and stop firmware update service depending on presence of sda.

--- a/recipes-core/systemd/systemd-units/fwu.service
+++ b/recipes-core/systemd/systemd-units/fwu.service
@@ -3,7 +3,9 @@ Description=fwu
 
 [Service]
 Type=oneshot
-ExecStart=/etc/scripts/fwu.sh
+ExecStartPre=/bin/sleep 3
+ExecStart=/etc/scripts/fwu.sh start
+ExecStop=/etc/scripts/fwu.sh stop
 RemainAfterExit=yes
 
 [Install]
