- Use default baud rate since it is not relevant for connection speed during normal operation. - Use stupid mode to avoid 30s delay.

--- a/recipes-connectivity/wvdial/wvdial/wvdial.conf
+++ b/recipes-connectivity/wvdial/wvdial/wvdial.conf
@@ -1,8 +1,9 @@
 [Dialer Defaults]
 Modem = /dev/ttyACM0
-Baud = 460800
+Baud = 9600
 Phone = *99#
-Username = usr
-Password = pwd
-Init1 = AT&C0
+Username = user
+Password = pass
+Init1 = ATZ
 Init2 = AT+CGDCONT=1,"IP","stromer.m2m.ch"
+Stupid Mode = 1
