Added configuration for dialing in to swisscom www using Huawei dongles.

--- a/recipes-connectivity/wvdial/wvdial/wvdial.conf
+++ b/recipes-connectivity/wvdial/wvdial/wvdial.conf
@@ -7,3 +7,7 @@ Password = pass
 Init1 = ATZ
 Init2 = AT+CGDCONT=1,"IP","stromer.m2m.ch"
 Stupid Mode = 1
+
+[Dialer swisscom]
+Modem = /dev/ttyUSB0
+Init2 = AT+CGDCONT=1,"IP","gprs.swisscom.ch"
