Unmount sda before showing done screen.

--- a/recipes-core/systemd/systemd-units/fwu.service
+++ b/recipes-core/systemd/systemd-units/fwu.service
@@ -2,11 +2,10 @@
 Description=fwu
 
 [Service]
-Type=oneshot
+Type=simple
 ExecStartPre=/bin/sleep 3
 ExecStart=/etc/scripts/fwu.sh start
 ExecStop=/etc/scripts/fwu.sh stop
-RemainAfterExit=yes
 
 [Install]
 WantedBy=basic.target
