Remain fwu service after exit.

--- a/recipes-core/systemd/systemd-units/fwu.service
+++ b/recipes-core/systemd/systemd-units/fwu.service
@@ -6,6 +6,7 @@ Type=simple
 ExecStartPre=/bin/sleep 3
 ExecStart=/etc/scripts/fwu.sh start
 ExecStop=/etc/scripts/fwu.sh stop
+RemainAfterExit=yes
 
 [Install]
 WantedBy=basic.target
