Added support for Realtek 8192CU based USB WiFi dongles.

--- a/recipes-kernel/linux/linux-mainline/usb-devices.cfg
+++ b/recipes-kernel/linux/linux-mainline/usb-devices.cfg
@@ -27,3 +27,17 @@ CONFIG_BT_HCIBTUSB_BCM=y
 # https://github.com/torvalds/linux/blob/v4.8/drivers/net/usb/Kconfig
 # http://cateee.net/lkddb/web-lkddb/USB_NET_AX8817X.html
 CONFIG_USB_NET_AX8817X=m
+
+# Realtek 8192CU based USB 2.0 WiFi Adapters
+# https://wiki.debian.org/rtl819x
+CONFIG_WLAN_VENDOR_REALTEK=y
+CONFIG_RTL8192CU=m
+
+# Various Realtek based USB 2.0 WiFi Adapters
+# https://wiki.debian.org/rtl819x
+#CONFIG_R8712U=m
+#CONFIG_R8188EU=m
+#CONFIG_88EU_AP_MODE=y
+#CONFIG_R8723AU=m
+#CONFIG_8723AU_AP_MODE=y
+#CONFIG_8723AU_BT_COEXIST=y
