--- a/recipes-core/systemd/systemd-units/fwu.service
+++ b/recipes-core/systemd/systemd-units/fwu.service
@@ -1,12 +1,9 @@
 [Unit]
 Description=fwu
-After=zram.service
-Requires=zram.service
+After=mnt-rfs.service zram.service
+Requires=mnt-rfs.service zram.service
 
 [Service]
 Type=simple
 ExecStartPre=/bin/sleep 5
 ExecStart=/etc/scripts/fwu.sh start
-
-[Install]
-WantedBy=basic.target
