Add dependencies for can0 service to avoid a too early startup (when can0 interface is not yet present).

--- a/recipes-core/systemd/systemd-units/can0.service
+++ b/recipes-core/systemd/systemd-units/can0.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=can0 interface setup
+After=network.target
+Wants=network.target
 
 [Service]
 Type=oneshot
@@ -9,4 +11,4 @@ ExecStop=/sbin/ip link set can0 down
 ExecRestart=/sbin/ip link set can0 type can restart
 
 [Install]
-WantedBy=basic.target
+WantedBy=drive.target
