- Added incremental fwu preparation service. - Added BMP280 service. - Renamed fwu to fwu-usb service.

--- a/recipes-core/systemd/systemd-units/fwu-usb.service
+++ b/recipes-core/systemd/systemd-units/fwu-usb.service
@@ -1,9 +1,9 @@
 [Unit]
-Description=fwu
+Description=fwu-usb
 After=mnt-rfs.service zram.service
 Requires=mnt-rfs.service zram.service
 
 [Service]
 Type=simple
 ExecStartPre=/bin/sleep 5
-ExecStart=/etc/scripts/fwu.sh start
+ExecStart=/etc/scripts/fwu-usb.sh start
