Made rfs readonly per default.

--- a/recipes-core/systemd/systemd-units/fwu-usb.service
+++ b/recipes-core/systemd/systemd-units/fwu-usb.service
@@ -2,6 +2,7 @@
 Description=fwu-usb
 After=mnt-rfs.service zram.service
 Requires=mnt-rfs.service zram.service
+Wants=led.service
 
 [Service]
 Type=simple
