wifi: set unique SSID during startup

--- a/recipes-connectivity/hostapd/hostapd/hostapd.conf
+++ b/recipes-connectivity/hostapd/hostapd/hostapd.conf
@@ -1,9 +1,9 @@
-chnittstelle und Treiber
+# Schnittstelle und Treiber
 interface=wlan0
 driver=nl80211
 
 # WLAN-Konfiguration
-ssid=MedusaWifi
+ssid=WIFI-MEDUSA
 channel=1
 
 # ESSID sichtbar
@@ -70,4 +70,3 @@ wpa_gmk_rekey=86400
 
 # Zugangsschlüssel (PSK) / hier in Klartext (ASCII)
 wpa_passphrase=12345678
-
