--- a/recipes-connectivity/hostapd/hostapd/hostapd.service
+++ b/recipes-connectivity/hostapd/hostapd/hostapd.service
@@ -5,7 +5,8 @@ After=network.target communication.target
 [Service]
 Type=forking
 PIDFile=/run/hostapd.pid
-ExecStart=@SBINDIR@/hostapd @SYSCONFDIR@/hostapd.conf -P /var/run/hostapd.pid -B
+ExecStartPre=/etc/scripts/wlan0.sh
+ExecStart=@SBINDIR@/hostapd /mnt/data/hostapd.conf -P /var/run/hostapd.pid -B
 
 [Install]
 WantedBy=debug.target
