Added CONFIG_USB_SERIAL_PL2303 Kernel module for development purposes.

--- a/recipes-kernel/linux/linux-mainline/usb-devices.cfg
+++ b/recipes-kernel/linux/linux-mainline/usb-devices.cfg
@@ -2,20 +2,20 @@
 # Remark: If possible, modules (=m) are used to reduce the boot time of the kernel.
 
 # Sierra Wireless HL8548, 1519:0020/0302/0303 (Comneon : HSIC Device)
-# https://github.com/torvalds/linux/blob/v4.8/drivers/net/usb/Kconfig
-# https://github.com/torvalds/linux/blob/v4.8/drivers/usb/class/Kconfig
 # http://cateee.net/lkddb/web-lkddb/USB_ACM.html
 # http://cateee.net/lkddb/web-lkddb/USB_NET_CDCETHER.html
 # Remark: CONFIG_USB_SIERRA_NET and CONFIG_USB_SERIAL_SIERRAWIRELESS do not seem to support VID 1519.
 CONFIG_USB_ACM=m
 CONFIG_USB_NET_CDCETHER=m
 
+# Globalsat BU-353-S4, 067b:2303 (Prolific Technology, Inc. : PL2303 Serial Port)
+# http://cateee.net/lkddb/web-lkddb/USB_SERIAL_PL2303.html
+# Remark: For development purposes.
+CONFIG_USB_SERIAL_PL2303=m
+
 # Asus USB-BT400, 0b05:17cb (ASUSTek Computer, Inc. : Broadcom BCM20702A0 Bluetooth)
-# https://github.com/torvalds/linux/blob/v4.8/drivers/bluetooth/Kconfig
-# https://github.com/torvalds/linux/blob/v4.8/net/bluetooth/bnep/Kconfig
-# https://github.com/torvalds/linux/blob/v4.8/net/bluetooth/rfcomm/Kconfig
 # http://elinux.org/Minnowboard:Adding_Bluetooth_Support_To_Your_Kernel
-# Remark: Must be modified or even removed for the final hardware.
+# Remark: For development purposes.
 CONFIG_BT_RFCOMM=m
 CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_BNEP=m
@@ -24,6 +24,5 @@ CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIBTUSB_BCM=y
 
 # AX88xxx Based USB 2.0 Ethernet Adapters such as D-Link DUB-E100
-# https://github.com/torvalds/linux/blob/v4.8/drivers/net/usb/Kconfig
 # http://cateee.net/lkddb/web-lkddb/USB_NET_AX8817X.html
 CONFIG_USB_NET_AX8817X=m
