Added gpio service where TCA6416 driver is loaded manually.

--- a/recipes-core/systemd/systemd-units/ble.service
+++ b/recipes-core/systemd/systemd-units/ble.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=ble
-After=drive.target
+After=gpio.service drive.target
+Requires=gpio.service
 Wants=drive.target
 
 [Service]
